version: "0.0.1"
opam-version: "1.2"
maintainer: "Vasil Dyadov <vasil.s.d@gmail.com>"
authors: [ "Vasil Daydov <vasil.s.d@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/vasil-sd/ocaml-statespace"
bug-reports: "https://github.com/vasil-sd/ocaml-statespace/issues"
dev-repo: "https://github.com/vasil-sd/ocaml-statespace.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
]
available: [ ocaml-version >= "4.03.0" ]
